@@ -1,3 +1,8 @@
+2007-03-08  Volker Reichelt  <reichelt@netcologne.de>
+
+	PR c++/30852
+	* semantics.c (finish_offsetof): Handle COMPOUND_EXPR.
+
 2007-03-07  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
 
 	* typeck.c (build_binary_op): Replace -Wstring-literal-comparison
