@@ -1,3 +1,8 @@
+2007-03-08  Volker Reichelt  <reichelt@netcologne.de>
+
+	PR c++/30852
+	* g++.dg/ext/offsetof1.C: Add cases with volatile.
+
 2007-03-07  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
 
 	* gcc.dg/20031012-1.c: Replace -Walways-true with -Waddress.
