@@ -1,3 +1,8 @@
+2007-03-08  Volker Reichelt  <reichelt@netcologne.de>
+
+	PR c++/30852
+	* c-common.c (fold_offsetof_1): Handle COMPOUND_EXPR.
+
 2007-03-07  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
 
 	* c.opt (Waddress): New.
